--- a/_posts/2015-07-15-Week 7 Files.md
+++ b/_posts/2015-07-15-Week 7 Files.md
@@ -1,12 +1,14 @@
 ﻿---
 
 {% include toc %}
+excerpt_separator: <!--more-->
 
 ---
 
 # Week7 Files
 
-标签（空格分隔）： python
+How to open & read & oprate a file.
+<!--more-->
 
 ---
 
