--- a/_posts/2015-07-15-Week 7 Files.md
+++ b/_posts/2015-07-15-Week 7 Files.md
@@ -1,22 +1,16 @@
-﻿
----
-
-{% include toc %}
-
----
-
-# Week7 Files
-
-How to open & read & oprate a file.
+﻿How to open & read & oprate a file.
 <!--more-->
 
 ---
+{% include toc %}
 
+---
+# Week7 Files
 
+---
 ## 1.Secondary storage
 
 ---
-
 ## 2.Opening a file - file handle
 
  1. Before we can read the contents of the file we must tell Python which file we are going to work with and what we will be doing with the file
